2010-06-27  Michael Barker  <mike@middlesoft.co.uk>

	* docs/specs/Makefile: Added uninstall-local 

2010-06-23  Michael Barker  <mike@middlesoft.co.uk>

	* Updated to version 1.8 of the RabbitMQ libraries
	  
2009-12-23  Jo Shields  <directhex@apebox.org>

	* docs/specs/Makefile: Use compiled Mono, not system Mono (fixes 
	  broken build on systems without Mono already installed)

2009-12-19  Michael Barker  <mike@middlesoft.co.uk>

	* Added stripped xml to avoid licensing issues.

2009-08-31  Michael Barker  <mike@middlesoft.co.uk>

	* Updated to version 1.6 of the RabbitMQ libraries

2009-05-26  Andrew Jorgensen  <ajorgensen@novell.com>

	* Makefile: Fixed dist from last commit here

2009-05-25  Michael Barker  <mike@middlesoft.co.uk>

	* Removed amqp spec files and modified generated code to fix licensing 
	issues.

2009-05-21  Michael Barker  <mike@middlesoft.co.uk>

	* Updated to version 1.5.3 of the RabbitMQ libraries.

2008-12-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: those paths are all wrong!

2008-12-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: huh, more messy sources.

2008-12-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : sigh, there was missing extension.

2008-12-08  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : I find SUBDIRS almost dumb. another attempt.

2008-12-08  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile, src/client/Makefile : another attempt to fix build.

2008-12-08  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : it was wrong fix.

2008-12-08  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : add docs/specs directory, to workaround build breakage.

2008-12-07  Michael BArker  <mike@middlesoft.co.uk>

	* Makefile:  Removed apigen, bootstrap and spec.  The code for
	the generated interfaces is added to source control.

2008-10-20  Atsushi Enomoto  <atsushi@ximian.com>

	(This ChangeLog is for Mono integration.)

	Patch by Michael Barker (patches are on bug #432471). Imported