@@ -1,3 +1,7 @@
+2010-07-09  Andrew Jorgensen  <ajorgensen@novell.com>
+
+	* Makefile: Fix make dist again (IntAllocator.cs)
+
 2010-06-27  Michael Barker  <mike@middlesoft.co.uk>
 
 	* docs/specs/Makefile: Added uninstall-local 
